--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,5 @@
+set -g prefix ^a
+
 # switch panes using Alt-arrow without prefix
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
@@ -113,7 +115,7 @@ set -g message-bg colour166
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin "tmux-plugins/tmux-safekill"
+set -g @plugin "jlipps/tmux-safekill"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
