--- a/tmuxinator/visitame.yml
+++ b/tmuxinator/visitame.yml
@@ -1,27 +1,27 @@
 # ~/.tmuxinator/visitame.yml
 
 name: visitame
-root: ~/Dev/visitame
+root: ~/Dev/7r/visitame
 pre_window:
-  - . ~/Dev/visitame/set-vars.sh
+  - . ~/Dev/7r/visitame/set-vars.sh
 windows:
   # Visita.me API core
   - core:
       layout: eee7,204x47,0,0{102x47,0,0,0,101x47,103,0[101x23,103,0,4,101x23,103,24,5]}
-      root: ~/Dev/visitame/visitame-core
+      root: ~/Dev/7r/visitame/visitame-core
       panes:
         - yarn && PORT=3000 yarn dev
         - now logs https://visitame-core.now.sh -f
   # Visita.me Cron
   - cron:
       layout: c758,204x47,0,0{101x47,0,0,1,102x47,102,0[102x23,102,0,6,102x23,102,24,7]}
-      root: ~/Dev/visitame/visitame-cron
+      root: ~/Dev/7r/visitame/visitame-cron
       panes:
         - yarn && PORT=3001 yarn dev
         - now logs https://visitame-cron.now.sh -f
   # Visita.me Web Bot
   - bot-client:
-      root: ~/Dev/7r/visitame-bot-client
+      root: ~/Dev/7r/visitame/visitame-bot-client
       panes:
         - yarn && PORT=3004 yarn start
   - bot-server:
@@ -35,6 +35,6 @@ windows:
         - yarn && PORT=3006 yarn dev
   # ngrok service
   - ngrok:
-      root: ~/Dev/visitame
+      root: ~/Dev/7r/visitame
       panes:
         - ngrok start -config ./ngrok.yml core botclient botserver cron
