--- a/tmuxinator/visitame.yml
+++ b/tmuxinator/visitame.yml
@@ -5,13 +5,6 @@ root: ~/Dev/7r/visitame
 pre_window:
   - . ~/Dev/7r/visitame/set-vars.sh
 windows:
-  # Visita.me API core
-  - core:
-      layout: eee7,204x47,0,0{102x47,0,0,0,101x47,103,0[101x23,103,0,4,101x23,103,24,5]}
-      root: ~/Dev/7r/visitame/visitame-core
-      panes:
-        - yarn && PORT=3000 yarn dev
-        - now logs https://visitame-core.now.sh -f
   # Visita.me Cron
   - cron:
       layout: c758,204x47,0,0{101x47,0,0,1,102x47,102,0[102x23,102,0,6,102x23,102,24,7]}
@@ -33,8 +26,13 @@ windows:
       root: ~/Dev/7r/bmo
       panes:
         - yarn && PORT=3006 yarn dev
+  # Admin
+  - admin:
+      root: ~/Dev/7r/visitame/admin
+      panes:
+        - yarn && yarn start
   # ngrok service
   - ngrok:
       root: ~/Dev/7r/visitame
       panes:
-        - ngrok start -config ./ngrok.yml core botclient botserver cron
+        - ngrok start -config ./ngrok.yml bmo botclient botserver cron admin
