--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ vim/plugged/
 vim/bundle/
 config/nvim/plugged
 config/nvim/.netrwhist
+config/raycast
+config/configstore
 ssh/
 zsh/pure
 config/coc
